--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
 	"author": "Melissa Pohlman",
 	"license": "MIT",
 	"scripts": {
-		"run-backend": "nodemon index.ts"
+		"run-backend": "nodemon index.ts",
+		"start-db": ""
 	},
 	"dependencies": {
 		"@types/koa": "^2.13.5",
+		"@types/koa-bodyparser": "^4.3.10",
 		"@types/koa-json": "^2.0.20",
 		"@types/koa-logger": "^3.1.2",
 		"@types/koa-mount": "^4.0.2",
 		"@types/koa-router": "^7.4.4",
+		"@types/mongoose": "^5.11.97",
+		"@types/node": "^18.11.19",
 		"koa": "^2.14.1",
 		"koa-body": "^6.0.1",
+		"koa-bodyparser": "^4.3.0",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-mount": "^4.0.0",
 		"koa-router": "^12.0.0",
+		"mongodb": "^5.0.0",
+		"mongoose": "^6.9.0",
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
