--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@typescript-eslint/parser": "^5.50.0",
 		"eslint": "^8.33.0",
 		"eslint-config-koa": "^2.0.2",
-		"eslint-plugin-node": "^11.1.0"
+		"eslint-plugin-node": "^11.1.0",
+		"jest": "^29.4.3"
 	}
 }
