--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"scripts": {
 		"run-backend": "nodemon index.ts",
-		"start-db": ""
+		"test": "jest"
 	},
 	"dependencies": {
 		"@types/koa": "^2.13.5",
@@ -30,11 +30,18 @@
 		"typescript": "^4.9.4"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.21.0",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-typescript": "^7.21.0",
+		"@shopify/jest-koa-mocks": "^5.0.1",
+		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
+		"babel-jest": "^29.4.3",
 		"eslint": "^8.33.0",
 		"eslint-config-koa": "^2.0.2",
 		"eslint-plugin-node": "^11.1.0",
-		"jest": "^29.4.3"
+		"jest": "^29.4.3",
+		"ts-jest": "^29.0.5"
 	}
 }
