--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
 	"license": "MIT",
 	"scripts": {
 		"run-backend": "nodemon index.ts",
-		"test": "jest"
+		"test": "jest",
+		"dev": "cd src/frontend && vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@koa/cors": "^4.0.0",
+		"@mui/material": "^5.11.15",
 		"@types/koa": "^2.13.5",
 		"@types/koa-bodyparser": "^4.3.10",
 		"@types/koa-json": "^2.0.20",
@@ -26,18 +33,28 @@
 		"mongodb": "^5.0.0",
 		"mongoose": "^6.9.0",
 		"nodemon": "^2.0.20",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"rewire": "^6.0.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"vite": "^4.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.0",
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-typescript": "^7.21.0",
+		"@mui/x-data-grid": "^6.0.4",
 		"@shopify/jest-koa-mocks": "^5.0.1",
 		"@types/jest": "^29.4.0",
+		"@types/koa__cors": "^4.0.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
+		"@vitejs/plugin-react": "^3.1.0",
 		"babel-jest": "^29.4.3",
+		"babel-plugin-rewire": "^1.2.0",
 		"eslint": "^8.33.0",
 		"eslint-config-koa": "^2.0.2",
 		"eslint-plugin-node": "^11.1.0",
