--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"nodemon": "^2.0.20",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.43.9",
 		"react-router-dom": "^6.10.0",
 		"rewire": "^6.0.0",
 		"ts-node": "^10.9.1",
